WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231537
[COOP] Crash under ReportingEndpointsCache::addEndpointFromDictionary()
https://bugs.webkit.org/show_bug.cgi?id=231537
Summary
[COOP] Crash under ReportingEndpointsCache::addEndpointFromDictionary()
Chris Dumez
Reported
2021-10-11 14:56:28 PDT
Crash under ReportingEndpointsCache::addEndpointFromDictionary(): 12 WebCore::ReportingEndpointsCache::addEndpointFromDictionary(WebCore::SecurityOriginData const&, WTF::URL const&, WTF::StringView) <== 12 WebCore::ReportingEndpointsCache::addEndpointFromDictionary(WebCore::SecurityOriginData const&, WTF::URL const&, WTF::StringView) 12 WebCore::ReportingEndpointsCache::addEndPointsFromResponse(WebCore::ResourceResponse const&) 12 WebCore::DocumentLoader::responseReceived(WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&) 12 WebCore::DocumentLoader::responseReceived(WebCore::CachedResource&, WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&) 12 WebCore::CachedRawResource::responseReceived(WebCore::ResourceResponse const&) 12 WebCore::SubresourceLoader::didReceiveResponse(WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&) 12 WebKit::WebResourceLoader::didReceiveResponse(WebCore::ResourceResponse const&, bool) 12 WebKit::WebResourceLoader::didReceiveWebResourceLoaderMessage(IPC::Connection&, IPC::Decoder&)
Attachments
Patch
(4.83 KB, patch)
2021-10-11 15:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-10-11 14:56:38 PDT
<
rdar://83530643
>
Chris Dumez
Comment 2
2021-10-11 15:00:17 PDT
Created
attachment 440844
[details]
Patch
Geoffrey Garen
Comment 3
2021-10-11 15:40:13 PDT
Comment on
attachment 440844
[details]
Patch r=me
EWS
Comment 4
2021-10-11 17:05:44 PDT
Committed
r283952
(
242804@main
): <
https://commits.webkit.org/242804@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440844
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug